--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "88c5bd43",
    "metadata": {},
    "outputs": [],
@@ -10,22 +10,22 @@
     "import torch\n",
     "from torch.distributions import Gumbel\n",
     "\n",
-    "gumbel_distr = Gumbel(torch.tensor([0.1,0.2]),1)"
+    "gumbel_distr = Gumbel(torch.tensor([0.,0.]),1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "c493f0a5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([1.2462, 1.1979])"
+       "tensor([-0.0028,  0.0806])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,117 @@
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "y_s_prime = torch.cat([seq, torch.tensor([[token_id]])], dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "bf72bc3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 5])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seq = torch.tensor([[1, 2, 3, 4, 5]])\n",
+    "seq.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "2eeb5b89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([52000])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V = 52000\n",
+    "tokens = torch.ones((V,))\n",
+    "tokens.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "929f7423",
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58af4897",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq  1\n",
+    "seq  2\n",
+    "seq  3\n",
+    "seq  4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "e26f43d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 2., 3., 4., 5., 1.],\n",
+      "        [1., 2., 3., 4., 5., 1.],\n",
+      "        [1., 2., 3., 4., 5., 1.],\n",
+      "        ...,\n",
+      "        [1., 2., 3., 4., 5., 1.],\n",
+      "        [1., 2., 3., 4., 5., 1.],\n",
+      "        [1., 2., 3., 4., 5., 1.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "seq = torch.tensor([[1, 2, 3, 4, 5]])  # Shape: (1, 5)\n",
+    "V = 52000\n",
+    "tokens = torch.ones((V,))             # Shape: (52000,)\n",
+    "\n",
+    "# Choose how many tokens you want to stack with\n",
+    "N = 4  # For example, use first 4 tokens\n",
+    "\n",
+    "# Repeat seq N times and reshape\n",
+    "seq_repeated = seq.repeat(V, 1)       # Shape: (N, 5)\n",
+    "\n",
+    "# Select N tokens and reshape to column vector\n",
+    "tokens_slice = tokens.unsqueeze(1)  # Shape: (N, 1)\n",
+    "\n",
+    "# Concatenate along last dimension\n",
+    "stacked = torch.cat([seq_repeated, tokens_slice], dim=1)  # Shape: (N, 6)\n",
+    "\n",
+    "print(stacked)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -103,11 +213,125 @@
     "max_value = torch.max(torch.cat((x, torch.tensor([Z]))))\n",
     "print(max_value)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "a85f2e75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([52000, 6, 1, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "V = 52000\n",
+    "A = torch.randn(V, 4)          # (V, 4)\n",
+    "B = torch.arange(V).float()    # (V,)\n",
+    "C = torch.arange(1000, V+1000).float()  # (V,)\n",
+    "\n",
+    "# Stack B and C into (V, 2)\n",
+    "BC = torch.stack([B, C], dim=1)  # (V, 2)\n",
+    "\n",
+    "# Concatenate with A\n",
+    "merged = torch.cat([A, BC], dim=1)  # (V, 6)\n",
+    "\n",
+    "# Reshape to (V, 6, 1, 1)\n",
+    "final = merged.unsqueeze(2).unsqueeze(3)  # (V, 6, 1, 1)\n",
+    "\n",
+    "print(final.shape)  # torch.Size([52000, 6, 1, 1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "e9cce9f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "expected Tensor as element 0 in argument 0, but got list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[47], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m x \u001b[38;5;241m=\u001b[39m [[torch\u001b[38;5;241m.\u001b[39mtensor([\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m])],[ torch\u001b[38;5;241m.\u001b[39mtensor([\u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m6\u001b[39m])]]\n\u001b[1;32m----> 2\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstack\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mshape\n",
+      "\u001b[1;31mTypeError\u001b[0m: expected Tensor as element 0 in argument 0, but got list"
+     ]
+    }
+   ],
+   "source": [
+    "x = [[torch.tensor([1, 2, 3])],[ torch.tensor([4, 5, 6])]]\n",
+    "torch.stack(x).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "057da795",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "stack expects each tensor to be equal size, but got [52000, 5] at entry 0 and [52000, 1] at entry 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[60], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m b \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mzeros((\u001b[38;5;241m52000\u001b[39m,\u001b[38;5;241m1\u001b[39m))\n\u001b[0;32m      3\u001b[0m c \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mzeros((\u001b[38;5;241m52000\u001b[39m,\u001b[38;5;241m1\u001b[39m))\n\u001b[1;32m----> 5\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstack\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43mc\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdim\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mshape\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: stack expects each tensor to be equal size, but got [52000, 5] at entry 0 and [52000, 1] at entry 1"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.zeros((52000,5))\n",
+    "b = torch.zeros((52000,1))\n",
+    "c = torch.zeros((52000,1))\n",
+    "\n",
+    "torch.stack([a,b,c], dim=1).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73251af0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.zeros((3,52000,6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "274b1581",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 52000, 6])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[:,:,-1].shape"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Passneox",
    "language": "python",
    "name": "python3"
   },
@@ -121,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
