--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -15,17 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "c493f0a5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([-0.0028,  0.0806])"
+       "tensor([[1, 1, 1, 1],\n",
+       "        [2, 2, 2, 2],\n",
+       "        [3, 3, 3, 3]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
