Added new parallelized version of sbs_batched; Fixed attention_mask shape

--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -70,17 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "bf72bc3f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([1, 5])"
+       "torch.Size([2, 3, 1, 4])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
